package br.com.fullcustom.postgresmultitenancy.config.web public class ThreadTenantStorage  private static ThreadLocalString currentTenant  new ThreadLocal public static void setTenantIdString tenantId  System.out.printlnSetting tenant id   tenantId currentTenant.settenantId  public static String getTenantId  System.out.printlnRequest tenant   currentTenant.get return currentTenant.get  public static void clear  currentTenant.remove