package br.com.fullcustom.postgresmultitenancy.domain

import java.io.Serializable
import java.util.ArrayList
import java.util.List
import java.util.Objects
import jakarta.persistence.CascadeType
import jakarta.persistence.Entity
import jakarta.persistence.GeneratedValue
import jakarta.persistence.GenerationType
import jakarta.persistence.Id
import jakarta.persistence.OneToMany
import com.fasterxml.jackson.annotation.JsonBackReference

Entity
public class Author implements Serializable {

 private static final long serialVersionUID = 1L

 Id
 GeneratedValue(strategy = GenerationType.IDENTITY)
 private Long id
 private String name
 private String email

 JsonBackReference
 OneToMany(mappedBy = "author", cascade = CascadeType.ALL)
 private List<Post> posts = new ArrayList<>()

 public Author() {}

 public Author(Long id, String name, String email) {
  this.id = id
  this.name = name
  this.email = email
 }

 public Long getId() {
  return this.id
 }

 public void setId(Long id) {
  this.id = id
 }

 public String getName() {
  return this.name
 }

 public void setName(String name) {
  this.name = name
 }

 public String getEmail() {
  return this.email
 }

 public void setEmail(String email) {
  this.email = email
 }

 public Author id(Long id) {
  this.id = id
  return this
 }

 public Author name(String name) {
  this.name = name
  return this
 }

 public Author email(String email) {
  this.email = email
  return this
 }

 public List<Post> getPosts() {
  return posts
 }

 public void setPosts(List<Post> posts) {
  this.posts = posts
 }

 @Override
 public boolean equals(Object o) {
  if (o == this) return true
  if (!(o instanceof Author)) {
   return false
  }
  Author user = (Author) o
  return Objects.equals(id, user.id)
 }

 @Override
 public int hashCode() {
  return Objects.hashCode(id)
 }

 @Override
 public String toString() {
  return "{" +
   " id='" + getId() + "'" +
   ", name='" + getName() + "'" +
   ", email='" + getEmail() + "'" +
   "}"
 }
}