package br.com.fullcustom.postgresmultitenancy.domain

import java.io.Serializable
import java.util.Date
import jakarta.persistence.Entity
import jakarta.persistence.GeneratedValue
import jakarta.persistence.GenerationType
import jakarta.persistence.Id
import jakarta.persistence.JoinColumn
import jakarta.persistence.ManyToOne
import com.fasterxml.jackson.annotation.JsonManagedReference

Entity
public class Post implements Serializable {

 private static final long serialVersionUID = 1L

 Id
 GeneratedValue(strategy = GenerationType.IDENTITY)
 private Long id
 private Date date
 private String title
 private String body

 JsonManagedReference
 ManyToOne
 JoinColumn(name = "idauthor")
 private Author author

 public Post() {}

 public Post(Long id, Date date, String title, String body, Author author) {
  super()
  this.id = id
  this.date = date
  this.title = title
  this.body = body
  this.author = author
 }

 public Long getId() {
  return id
 }

 public void setId(Long id) {
  this.id = id
 }

 public Date getDate() {
  return date
 }

 public void setDate(Date date) {
  this.date = date
 }

 public String getTitle() {
  return title
 }

 public void setTitle(String title) {
  this.title = title
 }

 public String getBody() {
  return body
 }

 public void setBody(String body) {
  this.body = body
 }

 public Author getAuthor() {
  return author
 }

 public void setAuthor(Author author) {
  this.author = author
 }

 Override
 public int hashCode() {
  final int prime = 31
  int result = 1
  result = prime * result + (id == null ? 0 : id.hashCode())
  return result
 }

 Override
 public boolean equals(Object obj) {
  if (this == obj) return true
  if (obj == null) return false
  if (getClass() != obj.getClass()) return false
  Post other = (Post) obj
  if (id == null) {
   if (other.id != null) return false
  } else if (!id.equals(other.id)) return false
  return true
 }

}