package br.com.fullcustom.postgresmultitenancy.resources

import java.util.List
import org.springframework.beans.factory.annotation.Autowired
import org.springframework.http.ResponseEntity
import org.springframework.web.bind.annotation.GetMapping
import org.springframework.web.bind.annotation.PathVariable
import org.springframework.web.bind.annotation.RequestHeader
import org.springframework.web.bind.annotation.RequestMapping
import org.springframework.web.bind.annotation.RestController
import br.com.fullcustom.postgresmultitenancy.domain.Post
import br.com.fullcustom.postgresmultitenancy.services.PostService

RestController
RequestMappingvalue  posts
public class PostResource 

Autowired
private PostService service

GetMappingvalue  id
public ResponseEntityPost findByIdPathVariable Long id 
var obj  service.findByIdid
return ResponseEntity.ok.bodyobj

GetMapping
public ResponseEntityListPost findAllRequestHeadername  Xtenant String tenant 
System.out.printlnTenant tenant
var obj  service.findAll
return ResponseEntity.ok.bodyobj